# super-farmer

./: .gitignore  Animal.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Colors.h  Dice.cpp  Dice.h  Game.h  GreenDice.cpp  GreenDice.h  Player.cpp  Player.h  RedDice.cpp  RedDice.h  super-farmer.cpp  super-farmer.desktop  super-farmer.rc  super-farmer.sln  super-farmer.vcxproj  super-farmer.vcxproj.filters
states/: GameStateManager.cpp  GameStateManager.h  MenuState.cpp  MenuState.h  State.cpp  State.h  ThrowState.cpp  ThrowState.h  TradeState.cpp  TradeState.h
x64/Debug/: super-farmer.exe.recipe  super-farmer.ilk  super-farmer.res  super-farmer.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/super-farmer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  super-farmer.lastbuildstate  super-farmer.write.1u.tlog
x64/Release/: super-farmer.exe.recipe  super-farmer.ilk  super-farmer.vcxproj.FileListAbsolute.txt
x64/Release/super-farmer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog  super-farmer.lastbuildstate  super-farmer.write.1u.tlog
